# agents-last-exam

./: .gitignore  AGENTS.md  CITATION.cff  CONTRIBUTING.md  LICENSE  README.md  ale_claw_gpt55_4200_full.yaml  ale_claw_gpt55_docker_linux.yaml  ale_claw_gpt55_docker_smoke.yaml  ale_claw_gpt55_final.yaml  ale_claw_gpt55_longtail.yaml  ale_claw_gpt55_rejudge.yaml  ale_claw_gpt55_round3.yaml  example_exp.yaml  exp_antigravity_seecheck.yaml  exp_ubuntu22_docker_hello.yaml  inspection_kasm_exp.yaml  pyproject.toml  quickstart.py  rejudge_openroad_host.py  requirements.txt  run.py  run_ale_gpt55_4200.sh  run_ale_gpt55_docker_linux.sh  run_final.sh  run_longtail.sh  run_rejudge.sh  run_round3.sh  run_win_batch1.sh  run_win_smoke.sh  show_result.py  win_batch1.yaml  win_smoke.yaml
ale/: cli.py
ale/agents/: base.py
ale/io/: artifact_mirror.py  data_staging.py  incremental_pull.py
ale/providers/: gcs_direct.py
ale/runner/: factory.py  lifecycle.py  loader.py  resume.py  runner.py  spec.py
ale/runtime/: Dockerfile.native_base  __init__.py  _docker_entry.py  base.py  docker.py  docker_executor.py  executor.py  local.py  local_executor.py
ale_run/: cli.py
ale_run/agents/: _bootstrap.py
ale_run/base_interface/: __init__.py  agent_deployer.py  agent_runtime.py  compute_env.py  executor.py  sandbox.py  task_data.py
ale_run/environments/: __init__.py  data_staging.py  env.py  force_timeout.py  output_pull.py  remote.py
ale_run/executors/: __init__.py  _docker_entry.py  _sandbox_entry.py  docker.py  local.py  sandbox.py
caseview/: .gitignore  README.md  case.html  index.html
docs/: AGENTS.md  ALE_CLAW_MCP_PLAN.md  DESIGN.md  EXTEND_AGENTS.md  EXTEND_ENVIRONMENTS.md  EXTEND_TASKS.md  RUN_TASKS.md  SESSION_API.md  SETUP_GCP.md  SETUP_LOCAL.md  SETUP_VMWARE.md  SIMPRUN_DIFF.md  agent_adapter.md  aws-setup.md  dataset_release.md  local-qemu.md  task_schema.md
env/: README.md  install_task_deps.sh  verify_task_env.sh
error_analysis/: README.md  README_zh.md  attributions.csv  attributions.json  attributions_cn.json  逐case详细分析.md
scripts/: download_dataset.py  evaluate_task.sh  fetch_task_data.sh  run_task.sh  validate_public_subset.py
selected_tasks/: cli.txt  docker_support.txt  final_rerun.txt  hello_both.txt  helloworld.txt  licensed.txt  rejudge_container_verifier.txt  rejudge_gogame.txt  rejudge_longtail7.txt  rejudge_need.txt  rejudge_round2.txt  rejudge_round3.txt  rerun_noturn.txt  rerun_seccrash.txt  seecheck.txt  smoke_docker.txt  tool_smoke_both.txt  unlicensed.txt  win_batch1.txt
tasks/: __init__.py  common_config.py  linux_runtime.py  pyproject.toml
tests/: conftest.py  smoke_ale_claw_transcript.py  smoke_data_staging.py  smoke_resume.py  smoke_runtime_validation.py
utils/: __init__.py  evaluation.py
(+650 files in other folders)
