[project]
name = "agents-last-exam"
version = "0.1.0"
description = "Public benchmark harness skeleton and task metadata examples for Agents' Last Exam."
readme = "README.md"
requires-python = ">=3.12,<3.14"
license = { text = "MIT" }
authors = [{ name = "Agents' Last Exam Contributors" }]
keywords = ["agents", "benchmark", "computer-use", "evaluation"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
]
dependencies = [
  "python-dotenv>=1.0.0",
  "openai>=1.0.0",
]

[project.optional-dependencies]
cua = [
  "cua-bench[all]",
  "cua-agent[all]",
  "cua-computer",
]
hf = [
  "huggingface-hub>=0.24.0",
  "datasets>=2.20.0",
]
dev = [
  "pytest>=8.0.0",
  "ruff>=0.5.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.setuptools]
packages = []
