[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agent-last-exam"
version = "0.1.0"
description = "Agent benchmark framework. Upper-layer-only replacement for agenthle orchestration."
readme = "README.md"
requires-python = ">=3.12,<3.14"
dependencies = [
    "openenv-core",
    # cua chain — pin all to path so the editable cua submodule is the single
    # source of truth (avoids PyPI drift). cua-agent + cua-computer + cua-core
    # were added when we brought OpenClaw harness in-tree (ale.agents.ale_claw
    # imports `from agent import ComputerAgent` etc.); litellm is transitive.
    "cua-bench",
    "cua-agent",
    "cua-computer",
    "cua-core",
    "pydantic>=2.0",
    "httpx>=0.27",
    "anyio>=4",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "ruff>=0.5",
]

[tool.uv.sources]
openenv-core = { path = "../OpenEnv", editable = true }
cua-bench    = { path = "../agenthle/submodules/cua/libs/cua-bench",   editable = true }
cua-agent    = { path = "../agenthle/submodules/cua/libs/python/agent",    editable = true }
cua-computer = { path = "../agenthle/submodules/cua/libs/python/computer", editable = true }
cua-core     = { path = "../agenthle/submodules/cua/libs/python/core",     editable = true }

[tool.hatch.build.targets.wheel]
# Two top-level packages: framework (`ale/`) and task library (`tasks/`).
# `tasks/` is a PEP 420 namespace package — no __init__.py files.
packages = ["ale", "tasks"]

[tool.hatch.build.targets.wheel.sources]
"ale" = "ale"
"tasks" = "tasks"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
